src/libqgesture.h

typedef struct QGesture QGesture;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPanGesture QPanGesture;
typedef struct QPinchGesture QPinchGesture;
typedef struct QPointF QPointF;
typedef struct QSwipeGesture QSwipeGesture;
typedef struct QTapAndHoldGesture QTapAndHoldGesture;
typedef struct QTapGesture QTapGesture;
QGesture* QGesture_new();
QGesture* QGesture_new2(QObject* parent);
QMetaObject* QGesture_MetaObject(const QGesture* self);
void* QGesture_Metacast(QGesture* self, const char* param1);
int QGesture_Metacall(QGesture* self, int param1, int param2, void** param3);
libqt_string QGesture_Tr(const char* s);
int QGesture_GestureType(const QGesture* self);
int QGesture_State(const QGesture* self);
QPointF* QGesture_HotSpot(const QGesture* self);
void QGesture_SetHotSpot(QGesture* self, QPointF* value);
bool QGesture_HasHotSpot(const QGesture* self);
void QGesture_UnsetHotSpot(QGesture* self);
void QGesture_SetGestureCancelPolicy(QGesture* self, int policy);
int QGesture_GestureCancelPolicy(const QGesture* self);
libqt_string QGesture_Tr2(const char* s, const char* c);
libqt_string QGesture_Tr3(const char* s, const char* c, int n);
QPanGesture* QPanGesture_new();
QPanGesture* QPanGesture_new2(QObject* parent);
QMetaObject* QPanGesture_MetaObject(const QPanGesture* self);
void* QPanGesture_Metacast(QPanGesture* self, const char* param1);
int QPanGesture_Metacall(QPanGesture* self, int param1, int param2, void** param3);
libqt_string QPanGesture_Tr(const char* s);
QPointF* QPanGesture_LastOffset(const QPanGesture* self);
QPointF* QPanGesture_Offset(const QPanGesture* self);
QPointF* QPanGesture_Delta(const QPanGesture* self);
double QPanGesture_Acceleration(const QPanGesture* self);
void QPanGesture_SetLastOffset(QPanGesture* self, QPointF* value);
void QPanGesture_SetOffset(QPanGesture* self, QPointF* value);
void QPanGesture_SetAcceleration(QPanGesture* self, double value);
libqt_string QPanGesture_Tr2(const char* s, const char* c);
libqt_string QPanGesture_Tr3(const char* s, const char* c, int n);
QPinchGesture* QPinchGesture_new();
QPinchGesture* QPinchGesture_new2(QObject* parent);
QMetaObject* QPinchGesture_MetaObject(const QPinchGesture* self);
void* QPinchGesture_Metacast(QPinchGesture* self, const char* param1);
int QPinchGesture_Metacall(QPinchGesture* self, int param1, int param2, void** param3);
libqt_string QPinchGesture_Tr(const char* s);
int QPinchGesture_TotalChangeFlags(const QPinchGesture* self);
void QPinchGesture_SetTotalChangeFlags(QPinchGesture* self, int value);
int QPinchGesture_ChangeFlags(const QPinchGesture* self);
void QPinchGesture_SetChangeFlags(QPinchGesture* self, int value);
QPointF* QPinchGesture_StartCenterPoint(const QPinchGesture* self);
QPointF* QPinchGesture_LastCenterPoint(const QPinchGesture* self);
QPointF* QPinchGesture_CenterPoint(const QPinchGesture* self);
void QPinchGesture_SetStartCenterPoint(QPinchGesture* self, QPointF* value);
void QPinchGesture_SetLastCenterPoint(QPinchGesture* self, QPointF* value);
void QPinchGesture_SetCenterPoint(QPinchGesture* self, QPointF* value);
double QPinchGesture_TotalScaleFactor(const QPinchGesture* self);
double QPinchGesture_LastScaleFactor(const QPinchGesture* self);
double QPinchGesture_ScaleFactor(const QPinchGesture* self);
void QPinchGesture_SetTotalScaleFactor(QPinchGesture* self, double value);
void QPinchGesture_SetLastScaleFactor(QPinchGesture* self, double value);
void QPinchGesture_SetScaleFactor(QPinchGesture* self, double value);
double QPinchGesture_TotalRotationAngle(const QPinchGesture* self);
double QPinchGesture_LastRotationAngle(const QPinchGesture* self);
double QPinchGesture_RotationAngle(const QPinchGesture* self);
void QPinchGesture_SetTotalRotationAngle(QPinchGesture* self, double value);
void QPinchGesture_SetLastRotationAngle(QPinchGesture* self, double value);
void QPinchGesture_SetRotationAngle(QPinchGesture* self, double value);
libqt_string QPinchGesture_Tr2(const char* s, const char* c);
libqt_string QPinchGesture_Tr3(const char* s, const char* c, int n);
QSwipeGesture* QSwipeGesture_new();
QSwipeGesture* QSwipeGesture_new2(QObject* parent);
QMetaObject* QSwipeGesture_MetaObject(const QSwipeGesture* self);
void* QSwipeGesture_Metacast(QSwipeGesture* self, const char* param1);
int QSwipeGesture_Metacall(QSwipeGesture* self, int param1, int param2, void** param3);
libqt_string QSwipeGesture_Tr(const char* s);
int QSwipeGesture_HorizontalDirection(const QSwipeGesture* self);
int QSwipeGesture_VerticalDirection(const QSwipeGesture* self);
double QSwipeGesture_SwipeAngle(const QSwipeGesture* self);
void QSwipeGesture_SetSwipeAngle(QSwipeGesture* self, double value);
libqt_string QSwipeGesture_Tr2(const char* s, const char* c);
libqt_string QSwipeGesture_Tr3(const char* s, const char* c, int n);
QTapGesture* QTapGesture_new();
QTapGesture* QTapGesture_new2(QObject* parent);
QMetaObject* QTapGesture_MetaObject(const QTapGesture* self);
void* QTapGesture_Metacast(QTapGesture* self, const char* param1);
int QTapGesture_Metacall(QTapGesture* self, int param1, int param2, void** param3);
libqt_string QTapGesture_Tr(const char* s);
QPointF* QTapGesture_Position(const QTapGesture* self);
void QTapGesture_SetPosition(QTapGesture* self, QPointF* pos);
libqt_string QTapGesture_Tr2(const char* s, const char* c);
libqt_string QTapGesture_Tr3(const char* s, const char* c, int n);
QTapAndHoldGesture* QTapAndHoldGesture_new();
QTapAndHoldGesture* QTapAndHoldGesture_new2(QObject* parent);
QMetaObject* QTapAndHoldGesture_MetaObject(const QTapAndHoldGesture* self);
void* QTapAndHoldGesture_Metacast(QTapAndHoldGesture* self, const char* param1);
int QTapAndHoldGesture_Metacall(QTapAndHoldGesture* self, int param1, int param2, void** param3);
libqt_string QTapAndHoldGesture_Tr(const char* s);
QPointF* QTapAndHoldGesture_Position(const QTapAndHoldGesture* self);
void QTapAndHoldGesture_SetPosition(QTapAndHoldGesture* self, QPointF* pos);
void QTapAndHoldGesture_SetTimeout(int msecs);
int QTapAndHoldGesture_Timeout();
libqt_string QTapAndHoldGesture_Tr2(const char* s, const char* c);
libqt_string QTapAndHoldGesture_Tr3(const char* s, const char* c, int n);